# Heliox-OS

./: .gitignore  CONTRIBUTING.md  README.md  pr100_diff.txt  pr101.diff  pr101_diff.txt  pr101_latest.txt  pr101_latest2.txt  pr102_diff.txt  pr103_diff.txt  pr104_diff.txt  pr106_diff.txt  pr107_diff.txt  pr110_diff.txt  pr112_diff.txt  pr113_diff.txt  pr113_new.txt  pr114_diff.txt  pr115_diff.txt  pr117_diff.txt  pr118_diff.txt  pr120_diff.txt  pr122.diff  pr123_diff.txt  pr124_diff.txt  pr124_new.txt  pr125_diff.txt  pr126_diff.txt  pr128_diff.txt  pr131_diff.txt  pr80_diff.txt  pr80_utf8.txt  pr81_diff.txt  pr81_utf8.txt  pr82_diff.txt  pr82_diff_latest.txt  pr82_diff_new2.txt  pr98_diff.txt  pr98_diff_new.txt  pr99_diff.txt  (+3 more)
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
daemon/: pyproject.toml
daemon/pilot/: actions.py  changelog.py  config.py  server.py
daemon/tests/: demo_cache.py  test_action_permissions.py  test_budget_tracker.py  test_calendar_agent.py  test_context_compressor.py  test_ipc_integration.py  test_memory_config.py  test_redis_adapter.py  test_screen_vision_timeout.py  test_vault_machine_id.py  test_wasm_plugin.py  test_workspace_index.py
neuralset.extractors.text.HuggingFaceText._get_data,release/cache_n_layers=20,name=HuggingFaceText,infra.version=release,model_name=unsloth-Llama-3.2-3B-ef725708/: Predator26-12252-info.jsonl  Predator26-153124-info.jsonl  Predator26-17216-info.jsonl  Predator26-2032-info.jsonl  (+17 more)
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: commands.rs  main.rs  tray.rs
(+59 files in other folders)
